# Sc-execution-engine

./: .gitignore  Anchor.toml  README.md  package.json
app/: actions.ts  cli.ts  index.ts  lib.ts  type.ts
programs/sc-execution-engine/: Cargo.toml
programs/sc-execution-engine/src/: errors.rs  lib.rs  state.rs  utils.rs
tests/: sc-execution-engine.ts  utils.ts
