[package]
name = "sc-execution-engine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sc_execution_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
solana-program = "=1.14.17"
constant_time_eq = "=0.2.5"
blake3 = "=1.3.3"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"
bytemuck = "1.13.1"
